@@ -27,18 +27,20 @@
  */
 package org.hisp.dhis.tracker.deduplication;
 
+import static org.hisp.dhis.test.utils.Assertions.assertContainsOnly;
+import static org.hisp.dhis.test.utils.Assertions.assertStartsWith;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Collections;
+import java.io.IOException;
 import java.util.List;
 import org.hisp.dhis.common.SortDirection;
 import org.hisp.dhis.common.UID;
+import org.hisp.dhis.feedback.NotFoundException;
 import org.hisp.dhis.test.integration.PostgresIntegrationTestBase;
+import org.hisp.dhis.tracker.TestSetup;
+import org.hisp.dhis.tracker.imports.domain.TrackerObjects;
 import org.hisp.dhis.user.User;
 import org.hisp.dhis.webapi.controller.event.webrequest.OrderCriteria;
 import org.junit.jupiter.api.BeforeEach;
@@ -46,196 +48,197 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
 class DeduplicationServiceIntegrationTest extends PostgresIntegrationTestBase {
+  @Autowired private TestSetup testSetup;
+
   @Autowired private DeduplicationService deduplicationService;
 
-  private static final UID TRACKED_ENTITY_A = UID.generate();
+  private UID trackedEntityAOriginal;
 
-  private static final UID TRACKED_ENTITY_B = UID.generate();
+  private UID trackedEntityADuplicate;
 
-  private static final UID TRACKED_ENTITY_C = UID.generate();
+  private UID trackedEntityBOriginal;
 
-  private static final UID TRACKED_ENTITY_D = UID.generate();
+  private UID trackedEntityBDuplicate;
 
   @BeforeEach
-  public void setupTestUser() {
-    User user = createUserWithAuth("testUser");
-    injectSecurityContextUser(user);
+  void setUp() throws IOException {
+    testSetup.setUpMetadata("tracker/simple_metadata.json");
+
+    User importUser = userService.getUser("tTgjgobT1oS");
+    injectSecurityContextUser(importUser);
+
+    TrackerObjects trackerObjects = testSetup.setUpTrackerData("tracker/event_and_enrollment.json");
+    TrackerObjects duplicateTrackedEntities =
+        testSetup.setUpTrackerData("tracker/deduplication/potential_duplicates.json");
+
+    trackedEntityAOriginal = trackerObjects.findTrackedEntity(UID.of("QS6w44flWAf")).get().getUid();
+    trackedEntityADuplicate =
+        duplicateTrackedEntities.findTrackedEntity(UID.of("DS6w44flWAf")).get().getUid();
+    trackedEntityBOriginal = trackerObjects.findTrackedEntity(UID.of("dUE514NMOlo")).get().getUid();
+    trackedEntityBDuplicate =
+        duplicateTrackedEntities.findTrackedEntity(UID.of("DUE514NMOlo")).get().getUid();
   }
 
   @Test
-  void testGetAllPotentialDuplicateByDifferentStatus() throws PotentialDuplicateConflictException {
-    PotentialDuplicate potentialDuplicate =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_B);
-    deduplicationService.addPotentialDuplicate(potentialDuplicate);
+  void shouldGetPotentialDuplicatesByStatus() throws PotentialDuplicateConflictException {
     PotentialDuplicate potentialDuplicate1 =
-        new PotentialDuplicate(TRACKED_ENTITY_C, TRACKED_ENTITY_D);
+        new PotentialDuplicate(trackedEntityAOriginal, trackedEntityADuplicate);
     deduplicationService.addPotentialDuplicate(potentialDuplicate1);
-
-    List<UID> potentialDuplicates = List.of(TRACKED_ENTITY_A, TRACKED_ENTITY_C);
+    potentialDuplicate1.setStatus(DeduplicationStatus.INVALID);
+    deduplicationService.updatePotentialDuplicate(potentialDuplicate1);
+    PotentialDuplicate potentialDuplicate2 =
+        new PotentialDuplicate(trackedEntityBOriginal, trackedEntityBDuplicate);
+    deduplicationService.addPotentialDuplicate(potentialDuplicate2);
 
     PotentialDuplicateCriteria criteria = new PotentialDuplicateCriteria();
-
-    criteria.setTrackedEntities(potentialDuplicates);
-    assertEquals(
-        potentialDuplicates.size(), deduplicationService.getPotentialDuplicates(criteria).size());
-
-    // set one potential duplicate to invalid
-    potentialDuplicate.setStatus(DeduplicationStatus.INVALID);
-    deduplicationService.updatePotentialDuplicate(potentialDuplicate);
-
+    criteria.setTrackedEntities(List.of(trackedEntityAOriginal, trackedEntityBOriginal));
     criteria.setStatus(DeduplicationStatus.OPEN);
-    deduplicationService
-        .getPotentialDuplicates(criteria)
-        .forEach(pd -> assertSame(DeduplicationStatus.OPEN, pd.getStatus()));
+
+    assertContainsOnly(
+        List.of(potentialDuplicate2), deduplicationService.getPotentialDuplicates(criteria));
 
     criteria.setStatus(DeduplicationStatus.INVALID);
-    deduplicationService
-        .getPotentialDuplicates(criteria)
-        .forEach(pd -> assertSame(DeduplicationStatus.INVALID, pd.getStatus()));
+
+    assertContainsOnly(
+        List.of(potentialDuplicate1), deduplicationService.getPotentialDuplicates(criteria));
 
     criteria.setStatus(DeduplicationStatus.ALL);
-    assertEquals(
-        potentialDuplicates.size(), deduplicationService.getPotentialDuplicates(criteria).size());
-  }
 
-  @Test
-  void testAddPotentialDuplicate() throws PotentialDuplicateConflictException {
-    PotentialDuplicate potentialDuplicate =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_B);
-    deduplicationService.addPotentialDuplicate(potentialDuplicate);
-    assertNotEquals(0, potentialDuplicate.getId());
-    assertEquals(
-        potentialDuplicate,
-        deduplicationService.getPotentialDuplicateById(potentialDuplicate.getId()));
-  }
-
-  @Test
-  void testGetPotentialDuplicateByUid() throws PotentialDuplicateConflictException {
-    PotentialDuplicate potentialDuplicate =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_B);
-    deduplicationService.addPotentialDuplicate(potentialDuplicate);
-    assertNotEquals(0, potentialDuplicate.getId());
-    assertEquals(
-        potentialDuplicate,
-        deduplicationService.getPotentialDuplicateByUid(UID.of(potentialDuplicate)));
-  }
-
-  @Test
-  void testGetPotentialDuplicateDifferentStatus() throws PotentialDuplicateConflictException {
-    PotentialDuplicate potentialDuplicate =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_B);
-    deduplicationService.addPotentialDuplicate(potentialDuplicate);
-    PotentialDuplicate potentialDuplicate1 =
-        new PotentialDuplicate(TRACKED_ENTITY_C, TRACKED_ENTITY_B);
-    deduplicationService.addPotentialDuplicate(potentialDuplicate1);
-
-    potentialDuplicate.setStatus(DeduplicationStatus.INVALID);
-    deduplicationService.updatePotentialDuplicate(potentialDuplicate);
-
-    potentialDuplicate1.setStatus(DeduplicationStatus.MERGED);
-    deduplicationService.updatePotentialDuplicate(potentialDuplicate1);
-
-    PotentialDuplicateCriteria criteria = new PotentialDuplicateCriteria();
-    criteria.setTrackedEntities(Collections.singletonList(TRACKED_ENTITY_B));
-    criteria.setStatus(DeduplicationStatus.INVALID);
-    assertEquals(
-        Collections.singletonList(potentialDuplicate),
+    assertContainsOnly(
+        List.of(potentialDuplicate1, potentialDuplicate2),
         deduplicationService.getPotentialDuplicates(criteria));
   }
 
   @Test
-  void testCreatePotentialDuplicateNotCreationStatus() {
+  void shouldAddPotentialDuplicate() throws PotentialDuplicateConflictException, NotFoundException {
     PotentialDuplicate potentialDuplicate =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_B);
-    potentialDuplicate.setStatus(DeduplicationStatus.ALL);
+        new PotentialDuplicate(trackedEntityAOriginal, trackedEntityADuplicate);
 
-    assertThrows(
-        PotentialDuplicateConflictException.class,
-        () -> deduplicationService.addPotentialDuplicate(potentialDuplicate));
+    deduplicationService.addPotentialDuplicate(potentialDuplicate);
+
+    assertEquals(
+        potentialDuplicate,
+        deduplicationService.getPotentialDuplicate(UID.of(potentialDuplicate.getUid())));
   }
 
   @Test
-  void testExistsDuplicate() throws PotentialDuplicateConflictException {
+  void shouldFailAddingPotentialDuplicateGivenInvalidSatus() {
     PotentialDuplicate potentialDuplicate =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_B);
+        new PotentialDuplicate(trackedEntityAOriginal, trackedEntityADuplicate);
+    potentialDuplicate.setStatus(DeduplicationStatus.ALL);
+
+    PotentialDuplicateConflictException exception =
+        assertThrows(
+            PotentialDuplicateConflictException.class,
+            () -> deduplicationService.addPotentialDuplicate(potentialDuplicate));
+
+    assertStartsWith("Invalid status", exception.getMessage());
+  }
+
+  @Test
+  void shouldSucceedCheckingExistence() throws PotentialDuplicateConflictException {
+    PotentialDuplicate potentialDuplicate =
+        new PotentialDuplicate(trackedEntityAOriginal, trackedEntityADuplicate);
+
     deduplicationService.addPotentialDuplicate(potentialDuplicate);
+
     assertTrue(deduplicationService.exists(potentialDuplicate));
   }
 
   @Test
-  void testShouldThrowWhenMissingTrackedEntityBProperty()
+  void shouldFailCheckingExistenceIfNoDuplicateIsGiven()
       throws PotentialDuplicateConflictException {
     PotentialDuplicate potentialDuplicate =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_B);
+        new PotentialDuplicate(trackedEntityAOriginal, trackedEntityADuplicate);
+
     deduplicationService.addPotentialDuplicate(potentialDuplicate);
+
     assertThrows(
         PotentialDuplicateConflictException.class,
-        () -> deduplicationService.exists(new PotentialDuplicate(TRACKED_ENTITY_A, null)));
+        () -> deduplicationService.exists(new PotentialDuplicate(trackedEntityAOriginal, null)));
   }
 
   @Test
-  void testShouldThrowWhenMissingTrackedEntityAProperty()
-      throws PotentialDuplicateConflictException {
+  void shouldFailCheckingExistenceIfNoOriginalIsGiven() throws PotentialDuplicateConflictException {
     PotentialDuplicate potentialDuplicate =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_B);
+        new PotentialDuplicate(trackedEntityAOriginal, trackedEntityADuplicate);
+
     deduplicationService.addPotentialDuplicate(potentialDuplicate);
+
     assertThrows(
         PotentialDuplicateConflictException.class,
-        () -> deduplicationService.exists(new PotentialDuplicate(null, TRACKED_ENTITY_B)));
+        () -> deduplicationService.exists(new PotentialDuplicate(null, trackedEntityADuplicate)));
   }
 
   @Test
-  void testExistsTwoTrackedEntitiesReverse() throws PotentialDuplicateConflictException {
+  void shouldFindExistingDuplicateIfGivenDuplicateInReverseOrder()
+      throws PotentialDuplicateConflictException {
     PotentialDuplicate potentialDuplicate =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_B);
+        new PotentialDuplicate(trackedEntityAOriginal, trackedEntityADuplicate);
     PotentialDuplicate potentialDuplicateReverse =
-        new PotentialDuplicate(TRACKED_ENTITY_B, TRACKED_ENTITY_A);
+        new PotentialDuplicate(trackedEntityADuplicate, trackedEntityAOriginal);
+
     deduplicationService.addPotentialDuplicate(potentialDuplicate);
+
     assertTrue(deduplicationService.exists(potentialDuplicateReverse));
   }
 
   @Test
-  void testGetAllPotentialDuplicatedByQuery() throws PotentialDuplicateConflictException {
+  void shouldGetAllPotentialDuplicatedByTrackedEntities()
+      throws PotentialDuplicateConflictException {
     PotentialDuplicate potentialDuplicate =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_B);
+        new PotentialDuplicate(trackedEntityAOriginal, trackedEntityADuplicate);
     PotentialDuplicate potentialDuplicate1 =
-        new PotentialDuplicate(TRACKED_ENTITY_C, TRACKED_ENTITY_D);
+        new PotentialDuplicate(trackedEntityBOriginal, trackedEntityBDuplicate);
     PotentialDuplicate potentialDuplicate2 =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_D);
-    PotentialDuplicateCriteria criteria = new PotentialDuplicateCriteria();
+        new PotentialDuplicate(trackedEntityAOriginal, trackedEntityBDuplicate);
     deduplicationService.addPotentialDuplicate(potentialDuplicate);
     deduplicationService.addPotentialDuplicate(potentialDuplicate1);
     deduplicationService.addPotentialDuplicate(potentialDuplicate2);
-    criteria.setTrackedEntities(Collections.singletonList(TRACKED_ENTITY_A));
+
+    PotentialDuplicateCriteria criteria = new PotentialDuplicateCriteria();
+    criteria.setTrackedEntities(List.of(trackedEntityAOriginal));
+
     List<PotentialDuplicate> list = deduplicationService.getPotentialDuplicates(criteria);
-    assertEquals(2, list.size());
-    assertTrue(list.contains(potentialDuplicate));
-    assertFalse(list.contains(potentialDuplicate1));
+
+    assertContainsOnly(List.of(potentialDuplicate, potentialDuplicate2), list);
   }
 
   @Test
-  void testUpdatePotentialDuplicate() throws PotentialDuplicateConflictException {
+  void shouldUpdatePotentialDuplicate()
+      throws PotentialDuplicateConflictException, NotFoundException {
     PotentialDuplicate potentialDuplicate =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_B);
+        new PotentialDuplicate(trackedEntityAOriginal, trackedEntityADuplicate);
+
     deduplicationService.addPotentialDuplicate(potentialDuplicate);
+
     assertEquals(
         DeduplicationStatus.OPEN,
-        deduplicationService.getPotentialDuplicateById(potentialDuplicate.getId()).getStatus());
+        deduplicationService
+            .getPotentialDuplicate(UID.of(potentialDuplicate.getUid()))
+            .getStatus());
+
     potentialDuplicate.setStatus(DeduplicationStatus.INVALID);
+
     deduplicationService.updatePotentialDuplicate(potentialDuplicate);
+
     assertEquals(
         DeduplicationStatus.INVALID,
-        deduplicationService.getPotentialDuplicateById(potentialDuplicate.getId()).getStatus());
+        deduplicationService
+            .getPotentialDuplicate(UID.of(potentialDuplicate.getUid()))
+            .getStatus());
   }
 
   @Test
   void shouldThrowWhenOrderFieldNotExists() throws PotentialDuplicateConflictException {
     PotentialDuplicate potentialDuplicate =
-        new PotentialDuplicate(TRACKED_ENTITY_A, TRACKED_ENTITY_B);
+        new PotentialDuplicate(trackedEntityAOriginal, trackedEntityADuplicate);
+
     deduplicationService.addPotentialDuplicate(potentialDuplicate);
 
     PotentialDuplicateCriteria criteria = new PotentialDuplicateCriteria();
     criteria.setOrder(List.of(OrderCriteria.of("field", SortDirection.ASC)));
+
     assertThrows(
         IllegalArgumentException.class,
         () -> deduplicationService.getPotentialDuplicates(criteria));
